root/css/rapidStyle.css
/* ... */
.contactDetails article {
  background-color:var(--tertiary-color);
  padding: 10px;
}

contactDetails > article > section {
border: 2px solid #000; /* Adjust as needed */
border-radius:var(--border-radius);
  padding: 10px;
}
.contactDetails div {
  border: solid 2px #0B1C55;
  border-radius:var(--border-radius);
  padding: 10px;
}

.contactDetails h2 {
  color:var(--text-dk-color);
  font-size: 1.25rem;
  font-family:var(--heading-font);
  margin-bottom:8px;
  Padding:0;
  text-align:left;

}
.contactDetails h3 {
padding-bottom: 10px;
}
.contactDetails li {
color: var(--text-dk-color);
font-family: var(--primary-font);
}

.contactUs {
  background-color:var(--secondary-color);
  width: 80%;
  padding: 10px;
  margin: auto;
  box-shadow: var(--shadow)
}
.contactUs h2{
  margin-bottom:20px;
  text-align: left;
  padding: 0;
}
.contactUs li {
  color:var(--text-dk-color);
  font-family: var(--primary-font);
  padding:2px;  
}

.contactForm input{
  width: 95%;
border: solid 1px #0B1C55;
  border-radius: 6px;   
  padding:10px;
  margin-bottom:5px;
}
.contactForm #message{
      height:165px;
  }

  .contactForm .btn- {
      width:98%;
    margin:10px 0 0;
  }






/****************************************************************************************/
/*                                car inventory                                         */
/*                Style specfic for the class inventory page                            */
/****************************************************************************************/

/** Restrict all image size to 250x150, keeping image original size 300x500 for car details page **/
.top-inventory img {
  width: 300px;
  height: 150px;
 margin-top: var(--spacer);
  margin-bottom: var(--spacer);
} 


/******************* SECTION FOR CAR DETAILS PAGE ********************/



.det-car article:nth-child(1) {
  background-color: var(--accent-color);
  padding: 10px;
}

.det-car article:nth-child(2) {
  background-color: var(--tertiary-color);
  padding: 10px;
}

.det-car h1 { 
  color: var(--primary-color);
  text-align: center; }
  

.det-car button {
  margin-top: var(--spacer-dbl); 
  padding: var(--spacer);
  width: 100%;
}
 
.det-imgs img {
  max-width: 90%;
  height: auto;
  display: block;
  margin-bottom: 10px; /* Add some spacing between images */
  margin-top: 20px; /* Add white space on top of images */
  border: solid 5px var(--secondary-color);
}

.det-imgs {
  display: grid;
  grid-template-columns: repeat(4, 1fr); /* Four columns for desktop version */
  gap: 10px; /* Add some gaps between columns */
  box-sizing: border-box;
  background-color: var(--text-lt-color);
  padding: var(--spacer);
}
/* Make the first image span all columns */
.det-imgs img:first-child {
  grid-column: 1 / -1;
  width: 600px; /* Make it fill the whole width of the grid */
  justify-self: center; /* Center the image */
}

/* Adjust size for the rest of the images */
.det-imgs img:not(:first-child) {
  width: 100%;
  height: auto;
}


.lease-details {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  margin: 0 auto; /* Center the grid horizontally */
  max-width: 80%; /* Adjust the percentage as needed */
}

.lease-details > dd:first-child {
  grid-column: 1 / -1;
  margin-bottom: 20px;
}

.lease-details > dd:not(:first-child) {
  margin-bottom: 10px;
}



/* ************************************************************************************************************ */
/*---------CSS FOR Sign In, Sign up pswd and usrnmreset page------*/
/* ************************************************************************************************************ */



/****************************************************************************************/
/*                                BEGIN     FOOTER                                      */
/****************************************************************************************/
footer h1 {color: var(--text-lt-color);}

footer {
  background-color: var(--primary-color);
  color: var(--text-lt-color);
  width: 100%;
  padding: 10px;
}

footer section {
  width: 80%;
  margin: auto;
  text-align: center;
}

footer h2 {
  color: var(--text-lt-color);
  font-size: 1.25rem;
  font-family: var(--heading-font);
  margin-bottom: 8px;
  text-align: left;
  padding:0;
}

footer button {
  width: 30%;
  margin-top: 10px;
  background-color: var(--text-lt-color);
  color: var(--text-dk-color);

}

footer a {
  color: var(--text-lt-color);
  font-family: var(--primary-font);
  text-decoration: none;  
}


.d {display: none;}

.mIcon a {
  display: inline-block;
  margin: 15px;
}

.i a {margin: 10px;}

/* END FOOTER */

/****************************************************************************************/
/*                                BEGIN    ABOUT US                                     */
/****************************************************************************************/
/* About US Header */
.about_us #about-top {
  min-height: 400px;
  color: var(--text-lt-color);
  background: var(--primary-color);
}
#about-top img{
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  z-index: 0;
}
.about_us h1 {
  color: var(--text-lt-color);
  text-align: center;
  padding-top: 1em;
}
.about_us h2 {
  padding-top: 1.5em;
  padding-bottom: 1em;
}
#about-top p {
  text-align: left;
  padding: 2em;
}
/* About Main */
#about-a {
  padding: 2em;
  background: var(--tertiary-color);
  margin: 1em 0;
}
#about-b {
  padding: 2em;
  background: var(--accent-color);
  margin-bottom: 1em;
}
#about-c {
  padding: 2em;
  background: var(--tertiary-color);
  margin-bottom: 1em;
}
#about-d {
  padding: 2em;
  background: var(--accent-color);
  margin-bottom: 1em;
}
/* ... */

